--- a/ETL_Mini_Project_kDysart_LTschudi.ipynb
+++ b/ETL_Mini_Project_kDysart_LTschudi.ipynb
@@ -233,7 +233,8 @@
     }
    ],
    "source": [
-    "# Get a brief summary of the crowdfunding_info DataFrame.\n"
+    "# Get a brief summary of the crowdfunding_info DataFrame.\n",
+    "crowdfunding_info_df.info()"
    ]
   },
   {
