--- a/ETL_Mini_Project_kDysart_LTschudi.ipynb
+++ b/ETL_Mini_Project_kDysart_LTschudi.ipynb
@@ -276,12 +276,13 @@
     }
    ],
    "source": [
-    "# Get the crowdfunding_info_df columns.\n"
+    "# Get the crowdfunding_info_df columns.\n",
+    "crowdfunding_info_df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -459,18 +460,20 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Assign the category and subcategory values to category and subcategory columns.\n"
+    "# Assign the category and subcategory values to category and subcategory columns.\n",
+    "crowdfunding_info_df[[\"category\",\"subcategory\"]] = crowdfunding_info_df[\"category & sub-category\"].str.split('/', n=1, expand=True)\n",
+    "crowdfunding_info_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +492,8 @@
    ],
    "source": [
     "# Get the unique categories and subcategories in separate lists.\n",
-    "\n",
+    "categories = crowdfunding_info_df['category'].unique()\n",
+    "subcategories = crowdfunding_info_df['subcategory'].unique()\n",
     "\n",
     "print(categories)\n",
     "print(subcategories)"
@@ -497,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -554,9 +558,10 @@
    ],
    "source": [
     "# Use a list comprehension to add \"cat\" to each category_id. \n",
+    "cat_ids = ['cat'+str(id) for id in category_ids]\n",
     "\n",
     "# Use a list comprehension to add \"subcat\" to each subcategory_id.    \n",
-    "\n",
+    "scat_ids = ['subcat'+str(id) for id in subcategory_ids]\n",
     "    \n",
     "print(cat_ids)\n",
     "print(scat_ids)"
@@ -564,18 +569,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a category DataFrame with the category_id array as the category_id and categories list as the category name.\n",
-    "\n",
-    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n"
+    "category_df = pd.DataFrame({\"category_id\": cat_ids, \"category\":categories})\n",
+    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n",
+    "subcategory_df = pd.DataFrame({\"subcategory_id\": scat_ids, \"subcategory\":subcategories})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +672,7 @@
        "8        cat9    journalism"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +864,7 @@
        "23       subcat24              audio"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1086,7 +1092,7 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1277,18 +1283,20 @@
        "4      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Rename the blurb, launched_at, and deadline columns.\n"
+    "# Rename the blurb, launched_at, and deadline columns.\n",
+    "campaign_df = campaign_df.rename(columns={\"blurb\":\"description\", \"launched_at\":\"launched_date\", \"deadline\":\"end_date\"})\n",
+    "campaign_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1466,18 +1474,20 @@
        "4       False      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Convert the goal and pledged columns to a `float` data type.\n"
+    "# Convert the goal and pledged columns to a `float` data type.\n",
+    "campaign_df[[\"goal\", \"pledged\"]] = campaign_df[[\"goal\", \"pledged\"]].astype(\"float64\")\n",
+    "campaign_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1503,18 +1513,19 @@
        "dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Check the datatypes\n"
+    "# Check the datatypes\n",
+    "campaign_df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1692,19 +1703,22 @@
        "4       False      False           theater/plays     theater        plays  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Format the launched_date and end_date columns to datetime format\n",
-    "from datetime import datetime as dt\n"
+    "from datetime import datetime as dt\n",
+    "campaign_df[\"launched_date\"] = pd.to_datetime(campaign_df[\"launched_date\"], unit='s').dt.strftime('%Y-%m-%d')\n",
+    "campaign_df[\"end_date\"] = pd.to_datetime(campaign_df[\"end_date\"], unit='s').dt.strftime('%Y-%m-%d')\n",
+    "campaign_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 56,
    "metadata": {
     "scrolled": false
    },
@@ -2038,7 +2052,7 @@
        "999        food trucks        cat1        subcat1  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2046,8 +2060,8 @@
    "source": [
     "# Merge the campaign_df with the category_df on the \"category\" column and \n",
     "# the subcategory_df on the \"subcategory\" column.\n",
-    "\n",
-    "\n",
+    "campaign_merged_df = campaign_df.merge(category_df, on=\"category\", how=\"left\")\n",
+    "campaign_merged_df = campaign_merged_df.merge(subcategory_df, on=\"subcategory\", how=\"left\")\n",
     "campaign_merged_df.tail(10)"
    ]
   },
@@ -3701,7 +3715,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
